turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:28: error: not found: value color
  while (colors(indice) != color) {indice = indice +1}
                           ^